# mechagogue

./: .gitignore  LICENSE  README.md  pyproject.toml
mechagogue/: arg_wrappers.py  commandline.py  debug.py  epoch.py  epoch_runner.py  jax_torch_test.py  joint.py  joint_test.py  joint_test2.py  player_list.py  population.py  serial.py  standardize.py  static.py  static_dataclass.py  train.py  tree.py  vpg.py  wrappers.py
mechagogue/breed/: normal.py
mechagogue/data/: example_data.py  maxnist.py
mechagogue/dp/: README.md  bandit.py  contextual_bandit.py  filter_args.py  mdp.py  others.py  poeg.py  pomdp.py  population_game.py  turn_game.py
mechagogue/ds/: system.py
mechagogue/ecology/: README.md  natural_selection.py  policy.py
mechagogue/envs/: README.md  count_up.py
mechagogue/envs/maxatar/: breakout.py
mechagogue/eval/: batch_eval.py
mechagogue/examples/: README.md  count_up.py  ga_example.py  goto.py  lava.py  nom_vpg.py  population_test.py  scan_test.py  scan_test2.py  scan_test3.py  sup_example.py  vpg_test.py
mechagogue/examples/maxatar/: README.md  breakout.py  (+5 more)
mechagogue/ga/: ga.py
mechagogue/nn/: attention.py  config.py  debug.py  distributions.py  initializers.py  layer.py  linear.py  mlp.py  nonlinear.py  permute.py  pool.py  q_networks.py  regularizer.py  sequence.py  structure.py  utils.py
mechagogue/opt/: sgd.py
mechagogue/optim/: README.md  adam.py  adamw.py  rmsprop.py  sgd.py
mechagogue/pop/: natural_selection.py  objective_free.py
mechagogue/rl/: README.md  dqn.py  vpg.py
mechagogue/sup/: README.md  ga.py  sup.py  supervised_backprop.py
(+99 files in other folders)
