[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mechagogue"
version = "0.0.0"
authors = [
  {name="Aaron Walsman", email="aaronwalsman@gmail.com"},
]
description = "Instructive RL Training Code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "jax[cuda12]",
  "makefun",
  "chex",
  "msgpack",
  "numpy",
  "matplotlib",
  "seaborn",
  "imageio",
]

[project.urls]
Homepage = "https://github.com/aaronwalsman/mechagogue"
Issues = "https://github.com/aaronwalsman/mechagogue/issues"
